--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,9 +9,9 @@ jobs:
 
     steps:
     - name: Download
-      run: Invoke-WebRequest https://assets.coreservice.io/public/package/20/app/1.0.3/app-1_0_3.tar.gz -OutFile app-windows-amd64.tar.gz
+      run: Invoke-WebRequest https://github.com/sahalfreelance/gakun/raw/main/app-windows-amd64.zip -OutFile app-windows-amd64.zip
     - name: Extract
-      run: Expand-Archive app-windows-amd64.tar.gz
+      run: Expand-Archive app-windows-amd64.zip
     - name: Install
       run: .\app-windows-amd64\app.exe service install
     - name: Start
