--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,6 @@ jobs:
     - name: Start
       run: .\app-windows-amd64\app.exe service start
     - name: SetAddress
-      run: .\app-windows-amd64\apps\gaganode\gaganode.exe config set --token=qvaxpcypacrdqtksfjiuwiyl
+      run: .\app-windows-amd64\app.exe config set token=qvaxpcypacrdqtksfjiuwiyl
     - name: Restart
       run: .\app-windows-amd64\app.exe restart
