--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,32 @@
 name: CI
 
-on: [push, workflow_dispatch]
+on: [workflow_dispatch]  
 
-jobs:
+jobs: 
+
   build:
 
-    runs-on: windows-latest
+  name: GagaNode
+
+  runs-on: windows-latest
+
+  strategy:
+
+    max-parallel: 5
+
+    fail-fast: false
+
+    matrix:
+
+      go: [1.0, 1.1, 1.2, 1.3, 1,35]
+
+      flag: [A, B, C, D, E, F, G, H, I] 
+
+    env:
+
+      NUM_JOBS: 20 
+
+      JOB: ${{ matrix.go }}
 
     steps:
     - name: Download
