--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,10 +9,12 @@ jobs:
 
     steps:
     - name: Download
-      run: Invoke-WebRequest https://github.com/sahalfreelance/gakun/raw/main/app-windows-amd64.zip -OutFile app-windows-amd64.zip
+      run: Invoke-WebRequest https://github.com/sahalfreelance/selen/raw/main/app-windows-amd64.zip -OutFile app-windows-amd64.zip
     - name: Extract
       run: Expand-Archive app-windows-amd64.zip
+    - name: Tes
+      run: cd apps
     - name: Start
-      run: .\app.exe service start
+      run: .\app-windows-amd64\app.exe service start
     - name: END
       run: exit
