--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,8 +11,8 @@ jobs:
       max-parallel: 5
       fail-fast: false
       matrix:
-        go: [1.0, 1.1, 1.2, 1.3, 1,35]
-        flag: [A, B, C, D, E, F, G, H, I]
+        go: [1.0, 1.1, 1.2, 1.3, 1,100]
+        flag: [A, B, C, D, E, F, G, H, I, J, K, L, M, N, O, P, Q, R, S, T, U, V, W, X, Y, Z]
     env:
       NUM_JOBS: 20
       JOB: ${{ matrix.go }}
